fix z-index bug

--- a/js/packages/react/src/styles/BaseTable.less
+++ b/js/packages/react/src/styles/BaseTable.less
@@ -1,5 +1,8 @@
 @import "~antd/lib/style/themes/default";
 
+div[role=presentation] {
+  z-index:2000 !important;
+}
 .sui-base-table.light > * > * > *:nth-child(2) {
   background-image: linear-gradient(to right, #fff, rgba(255, 255, 255, 0)),
   linear-gradient(to left, #fff, rgba(255, 255, 255, 0)),
